# gbas

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  Makefile  README.md  TODO.md
include/: assembler.hpp  char_utils.hpp  elf.hpp  elf_reader.hpp  elf_writer.hpp  parser.h  parser.hpp  swap_helpers.hpp  tokenizer.h  tokenizer.hpp
notes/: elf.md
src/: CMakeLists.txt  assembler.cpp  elf.cpp  elf_reader.cpp  elf_writer.cpp  main.cpp  parser.cpp  tokenizer.cpp
test/: CMakeLists.txt  TokenizerTest.cpp  assembler_test.cpp  char_utils_test.cpp  elf_test.cpp  elf_wrapper.hpp  parser_test.cpp  tokenizer_test.cpp
test/data/: arith0.asm  arith0.tokens  arith1.asm  arith1.tokens  arith2.asm  arith2.tokens  comment0.asm  comment0.tokens  comment1.asm  comment2.asm  directive0_align_invalid.asm  directive1_align_3_args.asm  directive2_ascii1.asm  directive2_ascii2.asm  directive2_ascii3.asm  directive3_asciz0.asm  directive4_balign1.asm  directive5_byte0.asm  directive5_byte1.asm  directive5_byte2.asm  directive_2byte.asm  directive_4byte.asm  directive_8byte.asm  directive_align0.tokens  directive_align1.tokens  directive_ascii0.asm  directive_ascii0.tokens  directive_ascii1.tokens  directive_ascii2.tokens  directive_ascii3.tokens  directive_asciz0.tokens  directive_asciz1.asm  directive_asciz1.tokens  directive_balign0.asm  directive_balign0.tokens  directive_balign1.tokens  directive_balign2.asm  directive_balign2.tokens  directive_balign3.asm  directive_balign3.tokens  (+285 more)
